# crypto-alert-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
alert/: crypto.py  main.py  schedule.py  settings.py  telegram.py
alert/api/v1/: alert_api.py
alert/model/: token.py
tests/: test_alert.py
