[tool.poetry]
name = "Alert"
version = "0.1.0"
description = ""
authors = ["Pouria Faraji <pouria.faraji@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
pandas = "^1.3.4"
uvicorn = "^0.15.0"
loguru = "^0.5.3"
requests = "^2.26.0"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
